--- a/gabs.html
+++ b/gabs.html
@@ -1317,7 +1317,15 @@
 		</tbody>
 	</table>
 
-	<button style="float: right;">😈Check all😈</button>
+
+	<div class="w3-container">
+		<div class="w3-show-inline-block">
+		<div class="w3-bar">
+		<<input style="float: left;" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search...">
+		<button style="float: right;">😈Check all😈</button>
+		</div>
+		</div>
+	</div>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.0/jquery.cookie.min.js"></script>
@@ -1372,4 +1380,27 @@
       $.cookie.json = true;
       repopulateFormELements();
     </script>
+	<script>
+		function myFunction() {
+		  // Declare variables
+		  var input, filter, table, tr, td, i, txtValue;
+		  input = document.getElementById("myInput");
+		  filter = input.value.toUpperCase();
+		  table = document.getElementById("myTable");
+		  tr = table.getElementsByTagName("tr");
+		
+		  // Loop through all table rows, and hide those who don't match the search query
+		  for (i = 0; i < tr.length; i++) {
+			td = tr[i].getElementsByTagName("td")[0];
+			if (td) {
+			  txtValue = td.textContent || td.innerText;
+			  if (txtValue.toUpperCase().indexOf(filter) > -1) {
+				tr[i].style.display = "";
+			  } else {
+				tr[i].style.display = "none";
+			  }
+			}
+		  }
+		}
+		</script>
 </body>
