--- a/gabs.html
+++ b/gabs.html
@@ -1321,7 +1321,7 @@
 	<div class="w3-container">
 		<div class="w3-show-inline-block">
 		<div class="w3-bar">
-		<<input style="float: left;" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search...">
+		<input style="float: left;" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search...">
 		<button style="float: right;">😈Check all😈</button>
 		</div>
 		</div>
