--- a/gabs.html
+++ b/gabs.html
@@ -82,7 +82,7 @@
   	<link rel="icon" type="image/png" href="images/gabsfav.png">
 </head>
 <body>
-	<table>
+	<table id="myTable">
 		<thead>
 			<tr>
 				<th>#</th>
