tweak search script

--- a/gabs.html
+++ b/gabs.html
@@ -1379,25 +1379,30 @@
 
       $.cookie.json = true;
       repopulateFormELements();
-    </script>
-<script>
-	function myFunction() {
-	  var input, filter, table, tr, td, i, txtValue;
-	  input = document.getElementById("myInput");
-	  filter = input.value.toUpperCase();
-	  table = document.getElementById("myTable");
-	  tr = table.getElementsByTagName("tr");
-	  for (i = 0; i < tr.length; i++) {
-		td = tr[i].getElementsByTagName("td")[0];
-		if (td) {
-		  txtValue = td.textContent || td.innerText;
-		  if (txtValue.toUpperCase().indexOf(filter) > -1) {
+	</script>
+	<script>
+		function myFunction() {
+		var input, filter, table, tr, td, i;
+		input = document.getElementById("myInput");
+		filter = input.value.toUpperCase();
+		table = document.getElementById("myTable");
+		tr = table.getElementsByTagName("tr");
+		for (var i = 0; i < tr.length; i++) {
+		var tds = tr[i].getElementsByTagName("td");
+		var flag = false;
+		for(var j = 0; j < tds.length; j++){
+			var td = tds[j];
+			if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+			flag = true;
+			} 
+		}
+		if(flag){
 			tr[i].style.display = "";
-		  } else {
+		}
+		else {
 			tr[i].style.display = "none";
-		  }
-		}       
-	  }
+		}
+		}
 	}
-</script>
+	</script>
 </body>
