--- a/gabs.html
+++ b/gabs.html
@@ -1419,7 +1419,7 @@
 		var input, filter, table, tr, td, i;
 		input = document.getElementById("myInput");
 		filter = input.value.toUpperCase();
-		table = document.getElementById("myTable");
+		table = document.getElementById("beers");
 		tr = table.getElementsByTagName("tr");
 		for (var i = 0; i < tr.length; i++) {
 		var tds = tr[i].getElementsByTagName("td");
