search script fix

--- a/gabs.html
+++ b/gabs.html
@@ -1415,7 +1415,7 @@
 	  }
 	</script> -->
 	<script>
-		function myFunction() {
+		function filterTable() {
 		var input, filter, table, tr, td, i;
 		input = document.getElementById("myInput");
 		filter = input.value.toUpperCase();
