--- a/gabs.html
+++ b/gabs.html
@@ -1380,41 +1380,40 @@
       $.cookie.json = true;
       repopulateFormELements();
 	</script>
-	<!-- <script>
-	function filterTable(beers, filter) {
-		// Get the table element
-		var table = document.getElementById(tableId);
-	  
-		// Get all the rows of the table
-		var rows = table.getElementsByTagName("tr");
-	  
-		// Loop through all rows and hide those that do not match the search query
-		for (var i = 0; i < rows.length; i++) {
-		  var row = rows[i];
-	  
-		  // Get all the cells of the current row
-		  var cells = row.getElementsByTagName("td");
-	  
-		  // Loop through all the cells and check if the cell text matches the search query
-		  var foundMatch = false;
-		  for (var j = 0; j < cells.length; j++) {
-			var cell = cells[j];
-			if (cell.innerText.toLowerCase().indexOf(filter.toLowerCase()) > -1) {
-			  foundMatch = true;
-			  break;
+<script>
+	function filterTable() {
+		var input, filter, table, tr, td, i, j, th;
+		input = document.getElementById("myInput");
+		filter = input.value.toUpperCase();
+		table = document.getElementById("beers");
+		tr = table.getElementsByTagName("tr");
+	
+		for (i = 0; i < tr.length; i++) {
+			td = tr[i].getElementsByTagName("td");
+			th = tr[i].getElementsByTagName("th");
+			var flag = false;
+			
+			for (j = 0; j < td.length || j < th.length; j++) {
+				if (j < td.length) {
+					if (td[j].innerHTML.toUpperCase().indexOf(filter) > -1) {
+						flag = true;
+					}
+				}
+				if (j < th.length) {
+					if (th[j].innerHTML.toUpperCase().indexOf(filter) > -1) {
+						flag = true;
+					}
+				}
 			}
-		  }
-	  
-		  // Show or hide the row based on whether a match was found
-		  if (foundMatch) {
-			row.style.display = "";
-		  } else {
-			row.style.display = "none";
-		  }
+			if (flag) {
+				tr[i].style.display = "";
+			} else {
+				tr[i].style.display = "none";
+			}
 		}
-	  }
-	</script> -->
-	<script>
+	}
+	</script>
+<!-- 	<script>
 		function filterTable() {
 		var input, filter, table, tr, td, i;
 		input = document.getElementById("myInput");
@@ -1438,5 +1437,5 @@
 		}
 		}
 	}
-	</script>
+	</script> -->
 </body>
