--- a/gabs.html
+++ b/gabs.html
@@ -355,7 +355,7 @@
 			<tr>
 				<td>26</td>
 				<td>Batch Brewing</td>
-				<td>Augustus Gloop’S Choc Fudge Peanut Brittle Stout</td>
+				<td>Augustus Gloop’s Choc Fudge Peanut Brittle Stout</td>
 				<td>Stout - Pastry</td>
 				<td>6.0%</td>
 				<td>MID</td>
@@ -678,7 +678,7 @@
 			<tr>
 				<td>58</td>
 				<td>Green Beacon</td>
-				<td>Peak Hype Lush Guava Beer (Green Beacon X Vodka Cruiser Collab)</td>
+				<td>Peak Hype Lush Guava Beer (Vodka Cruiser Collab)</td>
 				<td>Sour - Mixed Fermentation</td>
 				<td>6.1%</td>
 				<td>?</td>
@@ -954,7 +954,7 @@
 			<tr>
 				<td>85</td>
 				<td>Woolshed Brewery</td>
-				<td>Woolshed Brewery And Vili'S Family Bakery Meat Pint</td>
+				<td>Woolshed Brewery & Vili's Family Bakery Meat Pint</td>
 				<td>Specialty Beer</td>
 				<td>7.2%</td>
 				<td>HIGH</td>
