added homepage link

--- a/gabs.html
+++ b/gabs.html
@@ -1322,6 +1322,7 @@
 		<div class="w3-show-inline-block">
 		<div class="w3-bar">
 		<input style="float: left;" type="text" id="myInput" onkeyup="filterTable()" placeholder="Search...">
+		<button style="text-align:center;" onclick="window.location.href='https://link.jozk.me';">Built by Jourdan Keillor</button>
 		<button style="float: right;">😈Check all😈</button>
 		</div>
 		</div>
@@ -1413,29 +1414,4 @@
 		}
 	}
 	</script>
-<!-- 	<script>
-		function filterTable() {
-		var input, filter, table, tr, td, i;
-		input = document.getElementById("myInput");
-		filter = input.value.toUpperCase();
-		table = document.getElementById("beers");
-		tr = table.getElementsByTagName("tr");
-		for (var i = 0; i < tr.length; i++) {
-		var tds = tr[i].getElementsByTagName("td");
-		var flag = false;
-		for(var j = 0; j < tds.length; j++){
-			var td = tds[j];
-			if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
-			flag = true;
-			} 
-		}
-		if(flag){
-			tr[i].style.display = "";
-		}
-		else {
-			tr[i].style.display = "none";
-		}
-		}
-	}
-	</script> -->
 </body>
