--- a/gabs.html
+++ b/gabs.html
@@ -1322,7 +1322,7 @@
 		<div class="w3-show-inline-block">
 		<div class="w3-bar">
 		<input style="float: left;" type="text" id="myInput" onkeyup="filterTable()" placeholder="Search...">
-		<button style="text-align:center;" onclick="window.location.href='https://link.jozk.me';">Built by Jourdan Keillor</button>
+		<button style="float: center;" onclick="window.location.href='https://link.jozk.me';">Built by Jourdan Keillor</button>
 		<button style="float: right;">😈Check all😈</button>
 		</div>
 		</div>
