specify button ids

--- a/gabs.html
+++ b/gabs.html
@@ -1322,8 +1322,8 @@
 		<div class="w3-show-inline-block">
 		<div class="w3-bar">
 		<input style="float: left;" type="text" id="myInput" onkeyup="filterTable()" placeholder="Search...">
-		<button style="float: center;" onclick="window.location.href='https://link.jozk.me';">Built by Jourdan Keillor</button>
-		<button style="float: right;">😈Check all😈</button>
+		<button id="joz-button" style="float: center;" onclick="window.location.href='https://link.jozk.me';">Built by Jourdan Keillor</button>
+		<button id="check-button" style="float: right;">😈Check all😈</button>
 		</div>
 		</div>
 	</div>
@@ -1332,7 +1332,7 @@
     <script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.0/jquery.cookie.min.js"></script>
 
     <script>
-      function handleButtonClick(button){
+      function handleButtonClick(check-button){
         if ($(button).text().match("😈Check all😈")){
           $(":checkbox").prop("checked", true)
         } else {
