moved attrib to text

--- a/gabs.html
+++ b/gabs.html
@@ -1322,12 +1322,16 @@
 		<div class="w3-show-inline-block">
 		<div class="w3-bar">
 		<input style="float: left;" type="text" id="myInput" onkeyup="filterTable()" placeholder="Search...">
-		<button id="joz-button" style="float: center;" onclick="window.location.href='https://link.jozk.me';">Built by Jourdan Keillor</button>
 		<button id="check-button" style="float: right;">😈Check all😈</button>
 		</div>
 		</div>
 	</div>
 
+	<div style="text-align: center;">
+		<p>Built by Jourdan Keillor.</p>
+		<button onclick="window.location.href='https://link.jozk.me'">Go to my homepage</button>
+	  </div>
+	  
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.0/jquery.cookie.min.js"></script>
 
