--- a/gabs.html
+++ b/gabs.html
@@ -1328,9 +1328,9 @@
 	</div>
 
 	<div style="text-align: center;">
-		<p>Built by Jourdan Keillor.</p>
-		<button onclick="window.location.href='https://link.jozk.me'">Go to my homepage</button>
+		<p>Built by Jourdan Keillor. <a href="https://link.jozk.me">Link to socials.</a></p>
 	  </div>
+	  
 	  
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.0/jquery.cookie.min.js"></script>
