add gabs to link page

--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
         <a class="button button-instagram" href="https://www.instagram.com/jkr442/?hl=en" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
+
+        <!-- GABS 2023 Beer List -->
+        <a class="button button-gabs" href="https://link.jozk.me/gabs.html" target="_blank" rel="noopener">
+          <img class="icon" src="images/icons/gabsfav.png" alt="GABS Logo">Instagram</a>
+        <br>
         <br>
         <br>
 
