fix gabs button alt text

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <!-- GABS 2023 Beer List -->
         <a class="button button-gabs" href="https://link.jozk.me/gabs.html" target="_blank" rel="noopener">
-          <img class="icon" src="images/icons/gabsfav.png" alt="GABS Logo">Instagram</a>
+          <img class="icon" src="images/icons/gabsfav.png" alt="GABS Logo">GABS 2023 Beer List</a>
         <br>
         <br>
         <br>
