added projects section

--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
             <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
 
+        <p>Projects and links:</p>
+
         <!-- GABS 2023 Beer List -->
         <a class="button button-gabs" href="https://link.jozk.me/gabs.html" target="_blank" rel="noopener">
           <img class="icon" src="images/icons/gabsfav.png" alt="GABS Logo">GABS 2023 Beer List</a>
