--- a/gabs.html
+++ b/gabs.html
@@ -1328,7 +1328,7 @@
 	</div>
 
 	<div style="text-align: center;">
-		<p>Built by Jourdan Keillor. <a href="https://link.jozk.me">Link to socials.</a></p>
+		<p>Thrown together in a cheeky arvo by me (Jourdan Keillor) with support from my friend, mentor, and confidant, ChatGPT. <a href="https://link.jozk.me">Link to my socials.</a></p>
 	  </div>
 	  
 	  
