--- a/gabs.html
+++ b/gabs.html
@@ -1326,10 +1326,8 @@
 		</div>
 		</div>
 	</div>
-
-	<div style="text-align: center;">
-		<p>Thrown together in a cheeky arvo by me (Jourdan Keillor) with support from my friend, mentor, and confidant, ChatGPT. <a href="https://link.jozk.me">Link to my socials.</a></p>
-	  </div>
+ <br>
+	<br>
 	  
 	  
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -1418,4 +1416,11 @@
 		}
 	}
 	</script>
+	
+	
+<!--Footer-->
+<p style="font-size: 75%;">
+		<div style="text-align: center;">
+		<p>Thrown together in a cheeky arvo by me (Jourdan Keillor) with support from my friend, mentor, and confidant, ChatGPT. <a href="https://link.jozk.me">Link to my socials.</a></p>
+	  </div>
 </body>
