--- a/gabs.html
+++ b/gabs.html
@@ -1419,8 +1419,11 @@
 	
 	
 <!--Footer-->
-<p style="font-size: 75%;">
+<p style="font-size: 50%;">
 		<div style="text-align: center;">
-		<p>Thrown together in a cheeky arvo by me (Jourdan Keillor) with support from my friend, mentor, and confidant, ChatGPT. <a href="https://link.jozk.me">Link to my socials.</a></p>
-	  </div>
+		<p>Thrown together in a cheeky arvo by me (Jourdan Keillor) with support from my friend, mentor, and confidant, ChatGPT.
+			<br>
+			<a href="https://link.jozk.me">Link to my socials.</a></p>
+	  <br>
+		</div>
 </body>
