--- a/gabs.html
+++ b/gabs.html
@@ -1419,7 +1419,7 @@
 	
 	
 <!--Footer-->
-<p style="font-size: 50%;">
+<p style="font-size: 8pt;">
 		<div style="text-align: center;">
 		<p>Thrown together in a cheeky arvo by me (Jourdan Keillor) with support from my friend, mentor, and confidant, ChatGPT.
 			<br>
