--- a/gabs.html
+++ b/gabs.html
@@ -1421,7 +1421,7 @@
 <!--Footer-->
 <p style="font-size: 8pt;">
 		<div style="text-align: center;">
-		<p>Thrown together in a cheeky arvo by me (Jourdan Keillor) with support from my friend, mentor, and confidant, ChatGPT.
+		<p>Site by Jourdan Keillor, shortcuts by ChatGPT.
 			<br>
 			<a href="https://link.jozk.me">Link to my socials.</a></p>
 	  <br>
