--- a/gabs.html
+++ b/gabs.html
@@ -1419,9 +1419,9 @@
 	
 	
 <!--Footer-->
-<p style="font-size: 8pt;">
+<p style="font-size: 50%;">
 		<div style="text-align: center;">
-		<p>Site by Jourdan Keillor, shortcuts by ChatGPT.
+		<p>Site by Jourdan Keillor.
 			<br>
 			<a href="https://link.jozk.me">Link to my socials.</a></p>
 	  <br>
