shortened brewery names

--- a/gabs.html
+++ b/gabs.html
@@ -101,7 +101,7 @@
 			</tr>
 			<tr>
 				<td>1</td>
-				<td>Dad & Dave's Brewing</td>
+				<td>Dad & Dave's</td>
 				<td>Boba Beer</td>
 				<td>Sour - Berliner Weisse</td>
 				<td>6%</td>
@@ -111,7 +111,7 @@
 			</tr>
 			<tr>
 				<td>2</td>
-				<td>The Coastal Brewing</td>
+				<td>The Coastal</td>
 				<td>Homestead Blackberry & Apple Pastry Sour</td>
 				<td>Specialty Beer</td>
 				<td>6%</td>
@@ -121,7 +121,7 @@
 			</tr>
 			<tr>
 				<td>3</td>
-				<td>7th Day Brewery</td>
+				<td>7th Day</td>
 				<td>Suit UP</td>
 				<td>IPA - Black</td>
 				<td>6.5%</td>
@@ -131,7 +131,7 @@
 			</tr>
 			<tr>
 				<td>4</td>
-				<td>Six String Brewing</td>
+				<td>Six String</td>
 				<td>Whiskey In The Jar</td>
 				<td>Wood Aged Beer</td>
 				<td>12%</td>
@@ -151,7 +151,7 @@
 			</tr>
 			<tr>
 				<td>6</td>
-				<td>The Mill Brewery</td>
+				<td>The Mill</td>
 				<td>Go! Go! Ichigo!</td>
 				<td>Sour - Gose</td>
 				<td>5.5%</td>
@@ -161,7 +161,7 @@
 			</tr>
 			<tr>
 				<td>7</td>
-				<td>Hop Nation Brewing</td>
+				<td>Hop Nation</td>
 				<td>Market 2023</td>
 				<td>IPA - New England</td>
 				<td>6%</td>
@@ -171,7 +171,7 @@
 			</tr>
 			<tr>
 				<td>8</td>
-				<td>Bad Shepherd Brewing</td>
+				<td>Bad Shepherd</td>
 				<td>Barrel Aged Rum Double Choc...</td>
 				<td>Specialty Beer</td>
 				<td>7.5%</td>
@@ -181,7 +181,7 @@
 			</tr>
 			<tr>
 				<td>9</td>
-				<td>Yenda Brewing</td>
+				<td>Yenda</td>
 				<td>I Am Weiss</td>
 				<td>Weizen/Weissbier</td>
 				<td>5%</td>
@@ -211,7 +211,7 @@
 			</tr>
 			<tr>
 				<td>12</td>
-				<td>Sauce Brewing</td>
+				<td>Sauce</td>
 				<td>Lavender Cheesecake</td>
 				<td>Sour - Pastry</td>
 				<td>8%</td>
@@ -221,7 +221,7 @@
 			</tr>
 			<tr>
 				<td>13</td>
-				<td>St Andrews Beach Brewery</td>
+				<td>St Andrews Beach</td>
 				<td>SAB Lite</td>
 				<td>Lager - Pale</td>
 				<td>4.5%</td>
@@ -231,7 +231,7 @@
 			</tr>
 			<tr>
 				<td>14</td>
-				<td>Local Brewing</td>
+				<td>Local</td>
 				<td>Don't Go Baking My Heart (Nitro Cinnamon Pastry Stout)</td>
 				<td>Stout - Pastry</td>
 				<td>8%</td>
@@ -241,7 +241,7 @@
 			</tr>
 			<tr>
 				<td>15</td>
-				<td>Feral Brewing</td>
+				<td>Feral</td>
 				<td>Cherry Maguire</td>
 				<td>Sour - Pastry</td>
 				<td>6.5%</td>
@@ -251,7 +251,7 @@
 			</tr>
 			<tr>
 				<td>16</td>
-				<td>Urban Alley Brewery</td>
+				<td>Urban Alley</td>
 				<td>The Taverner All Brut Low Glut</td>
 				<td>IPA - White</td>
 				<td>7%</td>
@@ -261,7 +261,7 @@
 			</tr>
 			<tr>
 				<td>17</td>
-				<td>Co-Conspirators Brewing</td>
+				<td>Co-Conspirators</td>
 				<td>The Lover</td>
 				<td>Stout - Pastry</td>
 				<td>8%</td>
@@ -271,7 +271,7 @@
 			</tr>
 			<tr>
 				<td>18</td>
-				<td>Escape Brewing</td>
+				<td>Escape</td>
 				<td>Escape with the Schwartz</td>
 				<td>Lager - Dark</td>
 				<td>5%</td>
@@ -281,7 +281,7 @@
 			</tr>
 			<tr>
 				<td>19</td>
-				<td>Big Shed Brewing</td>
+				<td>Big Shed</td>
 				<td>Only Flans</td>
 				<td>Sour - Pastry</td>
 				<td>6.9%</td>
@@ -291,7 +291,7 @@
 			</tr>
 			<tr>
 				<td>20</td>
-				<td>Seeker Brewing</td>
+				<td>Seeker</td>
 				<td>Unicorn NEIPA</td>
 				<td>IPA - New England</td>
 				<td>7.2%</td>
@@ -304,7 +304,7 @@
 			</tr>
 			<tr>
 				<td>21</td>
-				<td>Resin Brewing</td>
+				<td>Resin</td>
 				<td>Calypso</td>
 				<td>IPA - Hazy</td>
 				<td>6.0%</td>
@@ -314,7 +314,7 @@
 			</tr>
 			<tr>
 				<td>22</td>
-				<td>Catchment Brewing</td>
+				<td>Catchment</td>
 				<td>Long Island Iced Tea Sour</td>
 				<td>Sour - Kettle Sour</td>
 				<td>7.5%</td>
@@ -324,7 +324,7 @@
 			</tr>
 			<tr>
 				<td>23</td>
-				<td>Psycho Suzie’s Brewing</td>
+				<td>Psycho Suzie’s</td>
 				<td>Upper Management</td>
 				<td>IPA - Red</td>
 				<td>8.5%</td>
@@ -344,7 +344,7 @@
 			</tr>
 			<tr>
 				<td>25</td>
-				<td>Wayward Brewing</td>
+				<td>Wayward</td>
 				<td>Violet Beauregarde’s Blueberry Marshmallow Lactose Sour Ale</td>
 				<td>Sour - Pastry</td>
 				<td>4.0%</td>
@@ -354,7 +354,7 @@
 			</tr>
 			<tr>
 				<td>26</td>
-				<td>Batch Brewing</td>
+				<td>Batch</td>
 				<td>Augustus Gloop’s Choc Fudge Peanut Brittle Stout</td>
 				<td>Stout - Pastry</td>
 				<td>6.0%</td>
@@ -364,7 +364,7 @@
 			</tr>
 			<tr>
 				<td>27</td>
-				<td>Blackman’s Brewery</td>
+				<td>Blackman’s</td>
 				<td>Red Frog, Raspberry Dark Lager</td>
 				<td>Lager - Dark</td>
 				<td>5.0%</td>
@@ -374,7 +374,7 @@
 			</tr>
 			<tr>
 				<td>28</td>
-				<td>Coldstream Brewery</td>
+				<td>Coldstream</td>
 				<td>Cherry Fruited Braggot</td>
 				<td>Braggot</td>
 				<td>6.5%</td>
@@ -384,7 +384,7 @@
 			</tr>
 			<tr>
 				<td>29</td>
-				<td>Good Land Brewing</td>
+				<td>Good Land</td>
 				<td>Bananarama Pina Colada</td>
 				<td>Sour - Fruit</td>
 				<td>5.8%</td>
@@ -394,7 +394,7 @@
 			</tr>
 			<tr>
 				<td>30</td>
-				<td>Precinct Brewing</td>
+				<td>Precinct</td>
 				<td>Throwing Haze</td>
 				<td>IPA - Hazy</td>
 				<td>6.8%</td>
@@ -404,7 +404,7 @@
 			</tr>
 			<tr>
 				<td>31</td>
-				<td>King River Brewing</td>
+				<td>King River</td>
 				<td>Sticke Coffee Kolsch</td>
 				<td>Kölsch</td>
 				<td>7%</td>
@@ -414,7 +414,7 @@
 			</tr>
 			<tr>
 				<td>32</td>
-				<td>Black Hops Brewery</td>
+				<td>Black Hops</td>
 				<td>Squishee</td>
 				<td>Sour - Kettle Sour</td>
 				<td>6.5%</td>
@@ -424,7 +424,7 @@
 			</tr>
 			<tr>
 				<td>33</td>
-				<td>Deeds Brewing</td>
+				<td>Deeds</td>
 				<td>Peanut Butter Brownie Imperial Stout</td>
 				<td>Stout - Imperial</td>
 				<td>10%</td>
@@ -434,7 +434,7 @@
 			</tr>
 			<tr>
 				<td>34</td>
-				<td>Blackflag Brewing</td>
+				<td>Blackflag</td>
 				<td>Barely Legal</td>
 				<td>IPA - Imperial</td>
 				<td>18.1%</td>
@@ -444,7 +444,7 @@
 			</tr>
 			<tr>
 				<td>35</td>
-				<td>Five' 3" Brewing</td>
+				<td>Five' 3"</td>
 				<td>Munich Dunkel</td>
 				<td>Munich Dunkel</td>
 				<td>5%</td>
@@ -454,7 +454,7 @@
 			</tr>
 			<tr>
 				<td>36</td>
-				<td>Bonehead Brewing</td>
+				<td>Bonehead</td>
 				<td>Throat Pour</td>
 				<td>Lager - Classic Pilsner</td>
 				<td>5.1%</td>
@@ -464,7 +464,7 @@
 			</tr>
 			<tr>
 				<td>37</td>
-				<td>Revel Brewing</td>
+				<td>Revel</td>
 				<td>Black Forrest Cake Sour</td>
 				<td>Sour - Pastry</td>
 				<td>6%</td>
@@ -474,7 +474,7 @@
 			</tr>
 			<tr>
 				<td>38</td>
-				<td>Pixel Brewing</td>
+				<td>Pixel</td>
 				<td>Peak Hype</td>
 				<td>IPA - American</td>
 				<td>6.5%</td>
@@ -484,7 +484,7 @@
 			</tr>
 			<tr>
 				<td>39</td>
-				<td>Bright Brewery</td>
+				<td>Bright</td>
 				<td>Drinkin’ Donuts Imperial Jam Donut Golden Ale</td>
 				<td>Experimental Beer</td>
 				<td>8%</td>
@@ -507,7 +507,7 @@
 			</tr>
 			<tr>
 				<td>41</td>
-				<td>Braeside Brewing</td>
+				<td>Braeside</td>
 				<td>Rye Rye Rye Deliah</td>
 				<td>IPA - Red</td>
 				<td>6.5%</td>
@@ -517,7 +517,7 @@
 			</tr>
 			<tr>
 				<td>42</td>
-				<td>Badlands Brewery</td>
+				<td>Badlands</td>
 				<td>"Grandmere's Crumble" Rhubarb & Custard</td>
 				<td>Saison/Farmhouse Ale</td>
 				<td>6%</td>
@@ -527,7 +527,7 @@
 			</tr>
 			<tr>
 				<td>43</td>
-				<td>Moffat Beach Brewing</td>
+				<td>Moffat Beach</td>
 				<td>Can'T Beet A Root</td>
 				<td>Lager - Classic Pilsner</td>
 				<td>4.8%</td>
@@ -537,7 +537,7 @@
 			</tr>
 			<tr>
 				<td>44</td>
-				<td>Shifty Lizard Brewing</td>
+				<td>Shifty Lizard</td>
 				<td>Cotton Candy Sour</td>
 				<td>Sour - Kettle Sour</td>
 				<td>4.8%</td>
@@ -567,7 +567,7 @@
 			</tr>
 			<tr>
 				<td>47</td>
-				<td>Reckless Brewing</td>
+				<td>Reckless</td>
 				<td>Bogan Fuel</td>
 				<td>Specialty Beer</td>
 				<td>6.9%</td>
@@ -577,7 +577,7 @@
 			</tr>
 			<tr>
 				<td>48</td>
-				<td>Modus Brewing</td>
+				<td>Modus</td>
 				<td>Chrome Fury</td>
 				<td>Sour - Pastry</td>
 				<td>6%</td>
@@ -587,7 +587,7 @@
 			</tr>
 			<tr>
 				<td>49</td>
-				<td>Aether Brewing</td>
+				<td>Aether</td>
 				<td>Biscoff Ice Cream Porter</td>
 				<td>Experimental Beer</td>
 				<td>8%</td>
@@ -597,7 +597,7 @@
 			</tr>
 			<tr>
 				<td>50</td>
-				<td>Eumundi Brewery</td>
+				<td>Eumundi</td>
 				<td>Ginger Nut Sparkling IPA</td>
 				<td>IPA - Brut</td>
 				<td>6%</td>
@@ -607,7 +607,7 @@
 			</tr>
 			<tr>
 				<td>51</td>
-				<td>Stoic Brewing</td>
+				<td>Stoic</td>
 				<td>Imperial Lemon Meringue Tart Sour</td>
 				<td>Sour - Pastry</td>
 				<td>8.3%</td>
@@ -617,7 +617,7 @@
 			</tr>
 			<tr>
 				<td>52</td>
-				<td>Mismatch Brewing</td>
+				<td>Mismatch</td>
 				<td>Hop Quad Buns</td>
 				<td>Belgian Quad</td>
 				<td>10.5%</td>
@@ -627,7 +627,7 @@
 			</tr>
 			<tr>
 				<td>53</td>
-				<td>Merino Brewery</td>
+				<td>Merino</td>
 				<td>Mulberry Bush Imperial IPA</td>
 				<td>IPA - Black</td>
 				<td>7.5%</td>
@@ -637,7 +637,7 @@
 			</tr>
 			<tr>
 				<td>54</td>
-				<td>Working Title Brew Co</td>
+				<td>Working Title</td>
 				<td>Take 5 - Choc Caramel Peanut Butter Cup Double Milk Stout</td>
 				<td>Stout - Pastry</td>
 				<td>8%</td>
@@ -647,7 +647,7 @@
 			</tr>
 			<tr>
 				<td>55</td>
-				<td>Capital Brewing</td>
+				<td>Capital</td>
 				<td>Salvaged Sour - Apple & Rhubarb Crumble Pastry Imperial Sour</td>
 				<td>Sour - Pastry</td>
 				<td>10%</td>
@@ -657,7 +657,7 @@
 			</tr>
 			<tr>
 				<td>56</td>
-				<td>Common Ground Brewing</td>
+				<td>Common Ground</td>
 				<td>Bloody Mistic</td>
 				<td>American Wheat</td>
 				<td>6%</td>
@@ -667,7 +667,7 @@
 			</tr>
 			<tr>
 				<td>57</td>
-				<td>Slipstream Brewing</td>
+				<td>Slipstream</td>
 				<td>Maple Bacon Pancake Stout</td>
 				<td>Stout - Sweet Stout</td>
 				<td>7%</td>
@@ -687,7 +687,7 @@
 			</tr>
 			<tr>
 				<td>59</td>
-				<td>Bridge Road Brewers</td>
+				<td>Bridge Road</td>
 				<td>Elektro Sour Wormhole</td>
 				<td>Sour - Berliner Weisser</td>
 				<td>4.3%</td>
@@ -697,7 +697,7 @@
 			</tr>
 			<tr>
 				<td>60</td>
-				<td>Squinters Brewing</td>
+				<td>Squinters</td>
 				<td>Tha Thiccness Version 2</td>
 				<td>IPA - Hazy</td>
 				<td>6.7%</td>
@@ -710,7 +710,7 @@
 			</tr>
 			<tr>
 				<td>61</td>
-				<td>Easy Times Brewing</td>
+				<td>Easy Times</td>
 				<td>Carnival Sour</td>
 				<td>Sour - Pastry</td>
 				<td>6%</td>
@@ -720,7 +720,7 @@
 			</tr>
 			<tr>
 				<td>62</td>
-				<td>Valley Hops Brewing</td>
+				<td>Valley Hops</td>
 				<td>The Nugget</td>
 				<td>Wild Australian IPA</td>
 				<td>6.5%</td>
@@ -730,7 +730,7 @@
 			</tr>
 			<tr>
 				<td>63</td>
-				<td>Stomping Ground Brewing</td>
+				<td>Stomping Ground</td>
 				<td>Buck Yeah</td>
 				<td>Eisbock</td>
 				<td>13%</td>
@@ -740,7 +740,7 @@
 			</tr>
 			<tr>
 				<td>64</td>
-				<td>Burleigh Brewing</td>
+				<td>Burleigh</td>
 				<td>Burleigh Black Giraffe Double Shot</td>
 				<td>Lager - Imperial Pils/Lager</td>
 				<td>9.5%</td>
@@ -750,7 +750,7 @@
 			</tr>
 			<tr>
 				<td>65</td>
-				<td>Your Mates Brewing</td>
+				<td>Your Mates</td>
 				<td>Imperial White Choc & Macadamia Stout</td>
 				<td>Stout - Imperial</td>
 				<td>9%</td>
@@ -770,12 +770,12 @@
 			</tr>
 			<tr>
 				<td>67</td>
-				<td>Shark Island Brewing</td>
+				<td>Shark Island</td>
 				<td>Life Can Be Sweet & Sour</td>
 				<td>Specialty Beer</td>
 				<td>6.9%</td>
 				<td>MID</td>
-				<td><details><summary></summary>A zesty Saison infused with cinnamon and pineapple, inspired by a mishap with champagne spilled on a laptop frozen on the screen of Sweet & Sour Pork. Expect a crisp, refreshing, sweet, and spicy beer from Shark Island Brewing</details></td>
+				<td><details><summary></summary>A zesty Saison infused with cinnamon and pineapple, inspired by a mishap with champagne spilled on a laptop frozen on the screen of Sweet & Sour Pork. Expect a crisp, refreshing, sweet, and spicy beer from Shark Island</details></td>
 				<td><input type="checkbox" id="option067"></td>
 			</tr>
 			<tr>
@@ -790,7 +790,7 @@
 			</tr>
 			<tr>
 				<td>69</td>
-				<td>Jetty Road Brewery</td>
+				<td>Jetty Road</td>
 				<td>Barrel-Aged Raspberry Imperial Stout</td>
 				<td>Stout - Imperial</td>
 				<td>10%</td>
@@ -810,7 +810,7 @@
 			</tr>
 			<tr>
 				<td>71</td>
-				<td>Warrandyte Brewing</td>
+				<td>Warrandyte</td>
 				<td>Dayummm</td>
 				<td>Schwarzbier</td>
 				<td>5.5%</td>
@@ -820,7 +820,7 @@
 			</tr>
 			<tr>
 				<td>72</td>
-				<td>Frenchies Brewery</td>
+				<td>Frenchies</td>
 				<td>Tropo-Thiol</td>
 				<td>Imperial IPA</td>
 				<td>8%</td>
@@ -830,7 +830,7 @@
 			</tr>
 			<tr>
 				<td>73</td>
-				<td>Sydney Brewery</td>
+				<td>Sydney</td>
 				<td>G and T Gose</td>
 				<td>Sour - Gose</td>
 				<td>5%</td>
@@ -870,8 +870,8 @@
 			</tr>
 			<tr>
 				<td>77</td>
-				<td>Atomic Vovo Whip</td>
-				<td>Raspberry Coconut Sour</td>
+				<td>Atomic</td>
+				<td>Vovo Whip</td>
 				<td>Sour - Kettle Sour</td>
 				<td>4.5%</td>
 				<td>LOW</td>
@@ -880,7 +880,7 @@
 			</tr>
 			<tr>
 				<td>78</td>
-				<td>Katoomba Brewing</td>
+				<td>Katoomba</td>
 				<td>Mountain Sunset</td>
 				<td>IPA - Red</td>
 				<td>6.5%</td>
@@ -900,7 +900,7 @@
 			</tr>
 			<tr>
 				<td>80</td>
-				<td>Akasha Brewing</td>
+				<td>Akasha</td>
 				<td>Barrel Aged Imperial Porter</td>
 				<td>Porter</td>
 				<td>10.2%</td>
@@ -913,7 +913,7 @@
 			</tr>
 			<tr>
 				<td>81</td>
-				<td>Quakers Hat Brewing</td>
+				<td>Quakers Hat</td>
 				<td>Brut IPA</td>
 				<td>IPA - Brut</td>
 				<td>6.3%</td>
@@ -943,7 +943,7 @@
 			</tr>
 			<tr>
 				<td>84</td>
-				<td>Currumbin Valley Brewing</td>
+				<td>Currumbin Valley</td>
 				<td>Cheery Ripe Porter</td>
 				<td>Brown Porter</td>
 				<td>4.8%</td>
@@ -953,7 +953,7 @@
 			</tr>
 			<tr>
 				<td>85</td>
-				<td>Woolshed Brewery</td>
+				<td>Woolshed</td>
 				<td>Woolshed Brewery & Vili's Family Bakery Meat Pint</td>
 				<td>Specialty Beer</td>
 				<td>7.2%</td>
@@ -963,7 +963,7 @@
 			</tr>
 			<tr>
 				<td>86</td>
-				<td>TWØBAYS Brewing</td>
+				<td>TWØBAYS</td>
 				<td>Pumpkin Of Liberty IPA</td>
 				<td>IPA - American</td>
 				<td>7%</td>
@@ -973,7 +973,7 @@
 			</tr>
 			<tr>
 				<td>87</td>
-				<td>Wandana Brewing</td>
+				<td>Wandana</td>
 				<td>Aztec (Pale Chocolate Lager)</td>
 				<td>Lager - Pale</td>
 				<td>4.4%</td>
@@ -983,7 +983,7 @@
 			</tr>
 			<tr>
 				<td>88</td>
-				<td>Frexi Brewing</td>
+				<td>Frexi</td>
 				<td>Pizza Beer</td>
 				<td>Sour - Gose</td>
 				<td>4.2%</td>
@@ -993,7 +993,7 @@
 			</tr>
 			<tr>
 				<td>89</td>
-				<td>Snowys Brewery</td>
+				<td>Snowy's</td>
 				<td>Snowy’S Kölsch</td>
 				<td>Kölsch</td>
 				<td>4.9%</td>
@@ -1003,7 +1003,7 @@
 			</tr>
 			<tr>
 				<td>90</td>
-				<td>Jervis Bay Brewing</td>
+				<td>Jervis Bay</td>
 				<td>Hypster Latte Stout</td>
 				<td>Sour - Berliner Weisse</td>
 				<td>7%</td>
@@ -1013,7 +1013,7 @@
 			</tr>
 			<tr>
 				<td>91</td>
-				<td>Blasta Brewing</td>
+				<td>Blasta</td>
 				<td>Fruits on Fire - Spicy Sour</td>
 				<td>Strawberry, Pineapple</td>
 				<td>5%</td>
@@ -1023,7 +1023,7 @@
 			</tr>
 			<tr>
 				<td>92</td>
-				<td>Hawkes Brewing</td>
+				<td>Hawkes</td>
 				<td>Hawke's Bob Hulk Double Hazy IPA</td>
 				<td>IPA - New England</td>
 				<td>8.5%</td>
@@ -1033,7 +1033,7 @@
 			</tr>
 			<tr>
 				<td>93</td>
-				<td>Lost Palms Brewing</td>
+				<td>Lost Palms</td>
 				<td>Feedback</td>
 				<td>Sour - Pastry</td>
 				<td>14%</td>
@@ -1043,7 +1043,7 @@
 			</tr>
 			<tr>
 				<td>94</td>
-				<td>Malt Shovel Brewers</td>
+				<td>Malt Shovel</td>
 				<td>MSB Chocolate Bubble Imperial Stout</td>
 				<td>Stout - Pastry</td>
 				<td>7.1%</td>
@@ -1053,7 +1053,7 @@
 			</tr>
 			<tr>
 				<td>95</td>
-				<td>Freshwater Brewing</td>
+				<td>Freshwater</td>
 				<td>Barrel Aged Cerveza</td>
 				<td>Lager - Pale</td>
 				<td>6%</td>
@@ -1063,7 +1063,7 @@
 			</tr>
 			<tr>
 				<td>96</td>
-				<td>10 Toes Brewing</td>
+				<td>10 Toes</td>
 				<td>Living The Cream</td>
 				<td>IPA - Pastry</td>
 				<td>5.8%</td>
@@ -1073,7 +1073,7 @@
 			</tr>
 			<tr>
 				<td>97</td>
-				<td>Newstead Brewing</td>
+				<td>Newstead</td>
 				<td>Yo Ho!</td>
 				<td>Rum Porter</td>
 				<td>9.9%</td>
@@ -1083,7 +1083,7 @@
 			</tr>
 			<tr>
 				<td>98</td>
-				<td>Boatrocker Brewers & Distillers</td>
+				<td>Boatrocker</td>
 				<td>Gulls Just Wanna Have Fun (Fish & Chip Gose)</td>
 				<td>Sour - Gose</td>
 				<td>5%</td>
@@ -1103,7 +1103,7 @@
 			</tr>
 			<tr>
 				<td>100</td>
-				<td>Bentspoke Brewery</td>
+				<td>Bentspoke</td>
 				<td>Keeping It Simple</td>
 				<td>JAIPA (Just another IPA)</td>
 				<td>6.8%</td>
@@ -1146,7 +1146,7 @@
 			</tr>
 			<tr>
 				<td>104</td>
-				<td>Cloudwater Brew Co.</td>
+				<td>Cloudwater</td>
 				<td>Proper Gabs</td>
 				<td>IPA - New England (Double)</td>
 				<td>8%</td>
@@ -1156,7 +1156,7 @@
 			</tr>
 			<tr>
 				<td>105</td>
-				<td>Hudson Brewing</td>
+				<td>Hudson</td>
 				<td>Hail Mary, Hair Of The Dog</td>
 				<td>Saison/Farmhouse Ale</td>
 				<td>5%</td>
@@ -1166,7 +1166,7 @@
 			</tr>
 			<tr>
 				<td>106</td>
-				<td>Impi Brewers</td>
+				<td>Impi</td>
 				<td>Fiery Azzurro Pils</td>
 				<td>Specialty Beer</td>
 				<td>6.5%</td>
@@ -1186,7 +1186,7 @@
 			</tr>
 			<tr>
 				<td>108</td>
-				<td>Rocky Ridge Brewing</td>
+				<td>Rocky Ridge</td>
 				<td>Frootie & The Blowfish</td>
 				<td>Fruit Beer</td>
 				<td>8%</td>
@@ -1196,7 +1196,7 @@
 			</tr>
 			<tr>
 				<td>109</td>
-				<td>Hiker Brewing</td>
+				<td>Hiker</td>
 				<td>Hold The Pork</td>
 				<td>Specialty Beer</td>
 				<td>5%</td>
@@ -1206,7 +1206,7 @@
 			</tr>
 			<tr>
 				<td>110</td>
-				<td>One Drop Brewing</td>
+				<td>One Drop</td>
 				<td>Raspberry Lemonade</td>
 				<td>Specialty Brew</td>
 				<td>6.2%</td>
@@ -1216,7 +1216,7 @@
 			</tr>
 			<tr>
 				<td>111</td>
-				<td>Rusty Penny Brewing</td>
+				<td>Rusty Penny</td>
 				<td>Lucky Charms Cereal Milk Stout</td>
 				<td>Stout - Sweet Stout</td>
 				<td>7.2%</td>
@@ -1226,7 +1226,7 @@
 			</tr>
 			<tr>
 				<td>112</td>
-				<td>Southern Highlands Brewing</td>
+				<td>Southern Highlands</td>
 				<td>Ronin - Japanese Double IPA</td>
 				<td>IPA - Double</td>
 				<td>7%</td>
@@ -1266,7 +1266,7 @@
 			</tr>
 			<tr>
 				<td>116</td>
-				<td>Felons Brewing</td>
+				<td>Felons</td>
 				<td>Barrel Aged Seltzerita</td>
 				<td>Seltzer</td>
 				<td>13%</td>
@@ -1286,7 +1286,7 @@
 			</tr>
 			<tr>
 				<td>118</td>
-				<td>Spreyton Cider Co</td>
+				<td>Spreyton</td>
 				<td>Sour Pineapple Cider</td>
 				<td>Cider</td>
 				<td>3.5%</td>
@@ -1296,7 +1296,7 @@
 			</tr>
 			<tr>
 				<td>119</td>
-				<td>Eddies Cider</td>
+				<td>Eddies</td>
 				<td>Eddies Organic Cider</td>
 				<td>Cider</td>
 				<td>4.5%</td>
@@ -1306,7 +1306,7 @@
 			</tr>
 			<tr>
 				<td>120</td>
-				<td>Flying Brick Cider Co</td>
+				<td>Flying Brick</td>
 				<td>Splicer</td>
 				<td>Cider</td>
 				<td>4.9%</td>
