brewery name tweaks

--- a/gabs.html
+++ b/gabs.html
@@ -141,7 +141,7 @@
 			</tr>
 			<tr>
 				<td>5</td>
-				<td>The Marsden Brewhouse</td>
+				<td>The Marsden</td>
 				<td>Marsden Neopolitan Porter</td>
 				<td>Stout - Tropical</td>
 				<td>5.5%</td>
@@ -840,7 +840,7 @@
 			</tr>
 			<tr>
 				<td>74</td>
-				<td>Mountain Culture Beer Co</td>
+				<td>Mountain Culture</td>
 				<td>Balloon Animals</td>
 				<td>IPA - Milkshake</td>
 				<td>7.5%</td>
@@ -923,7 +923,7 @@
 			</tr>
 			<tr>
 				<td>82</td>
-				<td>Brewmanity Beer Co</td>
+				<td>Brewmanity</td>
 				<td>Smokey Bacon Balls</td>
 				<td>Rauchbier</td>
 				<td>7%</td>
