Restructured pages, added navbar

--- a/projects.html
+++ b/projects.html
@@ -59,9 +59,9 @@
       <!-- This is the link for the different pages -->
       <div class="navbar-links">
           <ul>
-              <li><a href="index.html">Home</a></li> 
-              <li><a href="socials.html">Socials</a></li>
-              <li><a href="projects.html">Projects</a></li>
+            <li><a href="index.html">Home</a></li> 
+            <li><a href="socials.html">Socials</a></li>
+            <li><a href="projects.html">Projects</a></li>
           </ul>
       </div>
   </nav>
@@ -72,48 +72,18 @@
     <div class="row">
       <div class="column" style="margin-top: 10%">
 
-        <!-- Your Image Here -->
-        <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
-
         <!-- Title -->
-        <h1>Jourdan</h1>
+        <h1>Projects</h1>
 
-        <!-- Short Bio -->
-        <p>I'm a Melbourne-based lab systems administrator 
-          who spends my free time dabbling in a 
-          variety of online and offline projects<sup>1</sup>. 
-          My current fixations include optimization 
-          of automated<sup>2</sup> self-hosted<sup>3</sup> 
-          digital content platforms<sup>4</sup>
-          and analysing the nothing-if-not-consistently-piss-weak 
-          efforts of the Detroit Tigers<sup>5</sup>.
-        </p>
-        <p>Check out my socials and projects via the navbar links above.</p>
-
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <!-- GABS 2023 Beer List -->
+        <a class="button button-gabs" href="https://link.jozk.me/gabs.html" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/gabsfav.png" alt="GABS Logo">GABS 2023 Beer List</a>
         <br>
         <br>
         <br>
 
         <!--Footer-->
         <p style="font-size: 75%;">
-          <sup>1</sup> Mostly online
-          <br>
-          <sup>2</sup> Mostly *arr-suite apps
-          <br>
-          <sup>3</sup> Mostly Docker containers
-          <br>
-          <sup>4</sup> Mostly Plex
-          <br>
-          <sup>5</sup> Mostly piss 
-          <br>
           <a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor
         </p>
           <br>
