Minor changes made to notes/queries/organization

--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
     <!-- Navbar
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <nav class="navbar">
-      <!-- This will display Rahul Mishra on the upper-left corner -->
+      <!-- This will display Jourdan Keillor on the upper-left corner -->
       <div class="brand-title">
           <a href="#">Jourdan Keillor</a>
       </div>
