--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Navbar
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <nav class="navbar">
-      <!-- This will display Rahul Mishra on the upper-left corner -->
+      <!-- This will display Jourdan Keillor on the upper-left corner -->
       <div class="brand-title">
           <a href="#">Jourdan Keillor</a>
       </div>
@@ -76,7 +76,7 @@
         <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
 
         <!-- Title -->
-        <h1>Jourdan</h1>
+        <h1>About Me</h1>
 
         <!-- Short Bio -->
         <p>I'm a Melbourne-based lab systems administrator 
