--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,8 @@
         <!-- Title -->
         <h1>Projects</h1>
 
+        <p>Personal dalliances and time-wasters:</p>
+
         <!-- GABS 2023 Beer List -->
         <a class="button button-gabs" href="https://link.jozk.me/gabs.html" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/gabsfav.png" alt="GABS Logo">GABS 2023 Beer List</a>
