--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/brands.css">
 
     <!-- Navbar -->
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <script src="./navbar.js"></script>
 
   <!-- Favicon
