Minor changes made to notes/queries/organization

--- a/about.html
+++ b/about.html
@@ -73,13 +73,48 @@
     <div class="row">
       <div class="column" style="margin-top: 10%">
 
-        <!-- Title -->
-        <h1>Home</h1>
+        <!-- Your Image Here -->
+        <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
 
-        <img src="images/blank.webp" srcset="images/blank.webp" alt="This page intentionally left blank.">
+        <!-- Title -->
+        <h1>About Me</h1>
+
+        <!-- Short Bio -->
+        <p>I'm a Melbourne-based lab systems administrator 
+          who spends my free time dabbling in a 
+          variety of online and offline projects<sup>1</sup>. 
+          My current fixations include optimization 
+          of automated<sup>2</sup> self-hosted<sup>3</sup> 
+          digital content platforms<sup>4</sup>
+          and analysing the nothing-if-not-consistently-piss-weak 
+          efforts of the Detroit Tigers<sup>5</sup>.
+        </p>
+        <p>Check out my socials and projects via the navbar links above.</p>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
         <!--Footer-->
         <p style="font-size: 75%;">
+          <sup>1</sup> Mostly online
+          <br>
+          <sup>2</sup> Mostly *arr-suite apps
+          <br>
+          <sup>3</sup> Mostly Docker containers
+          <br>
+          <sup>4</sup> Mostly Plex
+          <br>
+          <sup>5</sup> Mostly piss 
+          <br>
           <a href="privacy.html">Privacy Policy</a> | By Jourdan Keillor
         </p>
           <br>
