Minor changes made to notes/queries/organization

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- Title -->
         <h1>Home</h1>
 
-        <img src="images/blank.webp" class="fit" srcset="images/blank.webp" alt="This page intentionally left blank.">
+        <img src="images/blank.webp" class="fit" alt="This page intentionally left blank.">
 
         <!--Footer-->
         <p style="font-size: 75%;">
