Minor changes made to notes/queries/organization

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
         <!-- Title -->
         <h1>Home</h1>
 
-        <img src="images/blank.webp" class="fit" alt="This page intentionally left blank.">
+        <div class='fill-screen'>
+          <img class='make-it-fit' 
+               src='images/blank.webp'>
+        </div>
 
         <!--Footer-->
         <p style="font-size: 75%;">
